[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "A Python library that provides decorators for caching function results in Redis, supporting multiple serialization formats and caching strategies, as well as asynchronous operations."
name = "redis_func_cache"
readme = "README.md"

requires-python = ">=3.8"

keywords = ["redis", "cache", "decorator"]

license = { text = "BSD-3-Clause" }

classifiers = [
  # "License :: OSI Approved :: BSD License",
  # "Development Status :: 1 - Planning",
  # "Development Status :: 2 - Pre-Alpha",
  # "Development Status :: 3 - Alpha",
  # "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  # "Development Status :: 6 - Mature",
  # "Development Status :: 7 - Inactive",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Lua",
]

dynamic = ["version"]

dependencies = [
  "redis>=3.5.0",
  "importlib-resources>=5.12; python_version<'3.9'",
  "typing-extensions>=4.5.0; python_version<'3.12'",
]

[project.urls]
Homepage = "https://github.com/tanbro/redis_func_cache"
Documentation = "https://redis-func-cache.readthedocs.io/"
Repository = "https://github.com/tanbro/redis_func_cache"
"Bug Tracker" = "https://github.com/tanbro/redis_func_cache/issues"
Changelog = "https://github.com/tanbro/redis_func_cache/main/CHANGELOG.md"

[project.optional-dependencies]
hiredis = ["redis[hiredis]"]
pygments = ["Pygments>=2.9"]
bson = ["pymongo>=3.9"]
msgpack = ["msgpack>=1.0"]
yaml = ["PyYAML>=5.4"]
cbor=["cbor2>=5.0"]
cloudpickle = ["cloudpickle>=3.0"]
all = [
  "redis[hiredis]",
  "Pygments>=2.9",
  "pymongo>=3.9",
  "msgpack>=1.0",
  "PyYAML>=5.4",
  "cloudpickle>=3.0",
]


[dependency-groups]
dev = [
  { include-group = "static-type-check" },
  { include-group = "test" },
  { include-group = "docs" },
]

static-type-check = ["mypy", { include-group = "typing" }]

typing-redis = ["types-redis>=3.5"]
typing-PyYAML = ["types-PyYAML>=5.4"]
typing-Pygments = ["types-Pygments>=2.9"]
typing = [
  { include-group = "typing-redis" },
  { include-group = "typing-PyYAML" },
  { include-group = "typing-Pygments" },
]

docs = [
  "importlib_metadata;python_version<'3.8'",
  "Sphinx>=7",
  "myst-parser",
  "furo",
  "sphinxcontrib-mermaid",
  "linkify-it-py",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx_tippy",
  "sphinx-version-warning",
]
coverage = ["coverage"]
test = [
  "python-dotenv",
  { include-group = "coverage" },
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redis_func_cache = ["redis_func_cache/py.typed", "redis_func_cache/lua/*.lua"]

[tool.setuptools_scm]
write_to = "src/redis_func_cache/_version.py"
