[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools-scm>=8"]

[project]
authors = [{ name = "Liu Xue-Yan", email = "liu_xue_yan@foxmail.com" }]
description = "A Python library that provides decorators for caching function results in Redis, supporting multiple serialization formats and caching strategies, as well as asynchronous operations."
name = "redis_func_cache"
readme = "README.md"

requires-python = ">=3.9"

keywords = ["redis", "cache", "decorator"]

license = "BSD-3-Clause"
license-files = ["LICENSE.md"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Lua",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dynamic = ["version"]

dependencies = [
  "redis>=3.5.0",
  "importlib-resources>=5.12; python_version<'3.9'",
  "typing-extensions>=4.5.0; python_version<'3.12'",
]

[project.urls]
homepage = "https://github.com/tanbro/redis_func_cache"
changelog = "https://github.com/tanbro/redis_func_cache/main/CHANGELOG.md"
documentation = "https://redis-func-cache.readthedocs.io/"
issues = "https://github.com/tanbro/redis_func_cache/issues"
source = "https://github.com/tanbro/redis_func_cache.git"

[project.optional-dependencies]
hiredis = ["redis[hiredis]"]
pygments = ["Pygments>=2.9"]
bson = ["pymongo>=3.9"]
msgpack = ["msgpack>=1.0"]
yaml = ["PyYAML>=5.4"]
cbor = ["cbor2>=5.0"]
cloudpickle = ["cloudpickle>=3.0"]
all = [
  "redis[hiredis]",
  "Pygments>=2.9",
  "pymongo>=3.9",
  "msgpack>=1.0",
  "PyYAML>=5.4",
  "cloudpickle>=3.0",
]


[dependency-groups]
dev = [
  { include-group = "typed" },
  { include-group = "test" },
  { include-group = "docs" },
]
typed = ["mypy", "types-redis", "types-PyYAML", "types-Pygments"]
docs = [
  "importlib_metadata;python_version<'3.8'",
  "Sphinx>=7",
  "myst-parser",
  "sphinx-book-theme",
  "sphinxcontrib-mermaid",
  "linkify-it-py",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx_tippy",
  "sphinx-version-warning",
  "sphinx-autodoc-typehints",
]
test = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "pytest-asyncio",
  "python-dotenv",
]

ipy = ["ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redis_func_cache = ["redis_func_cache/py.typed", "redis_func_cache/lua/*.lua"]

[tool.setuptools_scm]
write_to = "src/redis_func_cache/_version.py"
